# service/chat_service.go
@@ -13,24 +13,25 @@ import (
 )
 
 type ChatService struct {
-	//model *models.UserBasicModel
+	//um *models.UserBasicModel
 }
 
 func NewChatService() *ChatService {
 	return &ChatService{
-		//model: models.NewUserBasicModel(),
+		//um: models.NewUserBasicModel(),
 	}
 }
 
 type Node struct {
-	Conn *websocket.Conn
+	Conn      *websocket.Conn
 	DataQueue chan []byte
-	GroupSet set.Interface
+	GroupSet  set.Interface
 }
 
-//	clientMap 映射关系
-var clientMap map[uint]*Node = make(map[uint]*Node, 0)
-//	rwLock 读写锁
+// clientMap 映射关系
+var clientMap map[int64]*Node = make(map[int64]*Node, 0)
+
+// rwLock 读写锁
 var rwLock sync.RWMutex
 
 func (s *ChatService) Chat(c *gin.Context) {
@@ -39,7 +40,11 @@ func (s *ChatService) Chat(c *gin.Context) {
 	//targetId := query.Get("targetId")
 	//context := query.Get("context")
 	//userId, _ := strconv.Atoi(query.Get("userId"))
-	userId := c.GetUint("userId")
+	var req ChatReq
+	if err := c.Bind(&req); err != nil {
+		c.IndentedJSON(http.StatusOK, JSONResult{400, "参数错误", nil})
+		return
+	}
 
 	ws, err := (&websocket.Upgrader{CheckOrigin: func(r *http.Request) bool {
 		return true
@@ -51,22 +56,24 @@ func (s *ChatService) Chat(c *gin.Context) {
 
 	//	获取conn
 	node := &Node{
-		Conn: ws,
+		Conn:      ws,
 		DataQueue: make(chan []byte, 50),
-		GroupSet: set.New(set.ThreadSafe),
+		GroupSet:  set.New(set.ThreadSafe),
 	}
 	rwLock.Lock()
-	clientMap[userId] = node
+	clientMap[req.UserId] = node
 	rwLock.Unlock()
 
 	go sendProc(node)
 	go rcvProc(node)
-	sendPrivateMsg(userId, "欢迎来到聊天系统!")
+	//sendPrivateMsg(userId, "欢迎来到聊天系统!")
 }
 
-//	sendProc 读取消息队列里的数据并发送到websocket
+// sendProc 读取消息队列里的数据并发送到websocket
 func sendProc(node *Node) {
 	for data := range node.DataQueue {
+		//	收到私信
+		log.Infof(">>收到私信: %s", string(data))
 		if err := node.Conn.WriteMessage(websocket.TextMessage, data); err != nil {
 			log.Errorf(">>sendProc() Send msg to websocket failed! Err: [%v]", err)
 			return
@@ -74,7 +81,7 @@ func sendProc(node *Node) {
 	}
 }
 
-//	rcvProc 读取websocket消息并处理
+// rcvProc 读取websocket消息并处理
 func rcvProc(node *Node) {
 	//  读取websocket消息并处理
 	for {
@@ -86,26 +93,47 @@ func rcvProc(node *Node) {
 		}
 
 		//	日志打印收到的消息
-		log.Infof("[ws]: %v", msg)
+		//log.Infof("[ws]: %v", msg)
 		//	消息处理,广播,群发,或私信
-		wsMsgHandler(msg)
+		msgHandler(msg)
 	}
 }
 
-//	udpSendChan udp消息管道 里面的消息会发送到udp
-var udpSendChan chan []byte = make(chan []byte, 1024)
+// msgHandler 收到ws消息或udp消息后根据消息进行处理
+func msgHandler(data []byte) {
+	var msg models.Message
+	if err := json.Unmarshal(data, &msg); err != nil {
+		log.Errorf(">>wsMsgHandler() parse data failed! Err: [%v]", err)
+		return
+	}
 
-//	wsMsgHandler websocket消息处理器 收到ws消息后往udp消息管道发消息
-func wsMsgHandler(msg []byte) {
-	udpSendChan <- msg
+	log.Infof("[ws]: %s", string(data))
+	switch msg.Type {
+	case 1: //	私信
+		sendPrivateMsg(msg.TargetID, data)
+
+	}
 }
+
+// sendPrivateMsg 私信
+func sendPrivateMsg(id int64, content []byte) {
+	rwLock.RLock()
+	node, ok := clientMap[id]
+	rwLock.RUnlock()
+	if ok {
+		node.DataQueue <- content
+	}
+}
+
+// udpSendChan udp消息管道 里面的消息会发送到udp 用于群发
+var udpSendChan chan []byte = make(chan []byte, 1024)
 
 func init() {
 	go udpSendProc()
 	go udpRcvProc()
 }
 
-//	udpRcvProc udp数据接收协程,收到消息后进行处理
+// udpRcvProc udp数据接收协程,收到消息后进行处理
 func udpRcvProc() {
 	udp, err := net.ListenUDP("udp", &net.UDPAddr{
 		IP:   net.IPv4zero,
@@ -123,36 +151,11 @@ func udpRcvProc() {
 			log.Errorf(">>udpRcvProc() read message failed! Err: [%v]", err)
 			return
 		}
-		udpMessageHandler(buff[0:n])
+		msgHandler(buff[0:n])
 	}
 }
 
-//	udpMessageHandler udp消息处理器 收到udp消息后根据消息类型进行处理
-func udpMessageHandler(data []byte) {
-	var msg models.Message
-	if err := json.Unmarshal(data, &msg); err != nil {
-		log.Errorf(">>udpMessageHandler() parse data failed! Err: [%v]", err)
-		return
-	}
-
-	switch msg.Type {
-	case "1":	//	私信
-		sendPrivateMsg(msg.TargetID, msg.Contend)
-
-	}
-}
-
-//	sendPrivateMsg 私信
-func sendPrivateMsg(id uint, contend string) {
-	rwLock.RLock()
-	node, ok := clientMap[id]
-	rwLock.RUnlock()
-	if ok {
-		node.DataQueue <- []byte(contend)
-	}
-}
-
-//	udpSendProc udp数据发送协程
+// udpSendProc udp数据发送协程
 func udpSendProc() {
 	udp, err := net.DialUDP("udp", nil, &net.UDPAddr{
 		IP:   net.IPv4(192, 168, 3, 16),
